--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.tokio]
+version = "1.20.1"
+features = ["time"]
+
+[dev-dependencies.tokio]
+version = "1.20.1"
+features = ["full"]
